[backend] add healthcheck controller
